objects/Global_Dealer_Program__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countries_Supported__c</fullName>
        <label>Countries Supported</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Domain__c</fullName>
        <label>Country Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Performance_Period_End_Date__c</fullName>
        <label>Current Performance Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Performance_Period_Start_Date__c</fullName>
        <label>Current Performance Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Load_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Display_Achievement_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Achievement Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Bonus_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Bonus Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Promotion_to_Next_Tier_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Promotion to Next Tier Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Row__c</fullName>
        <label>Display Row</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Stay_in_Same_Tier_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Stay in Same Tier Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Quarter_of_Performance_Period__c</fullName>
        <label>First Quarter of Performance Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Period_Final__c</fullName>
        <description>TO Get the consolidated value of Performance Period.</description>
        <formula>TEXT(Performance_Year__c)   &amp;  &quot; - &quot; &amp;  IF(ISPICKVAL(Performance_Period__c,  &quot;P1&quot;),  &quot;P1&quot;, IF(ISPICKVAL(Performance_Period__c, &quot;P2&quot;), &quot;P2&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Period Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Period__c</fullName>
        <label>Performance Period</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_Year__c</fullName>
        <label>Performance Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Performance_Period_End_Date__c</fullName>
        <label>Previous Performance Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Performance_Period_Start_Date__c</fullName>
        <label>Previous Performance Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Quarter_of_Performance_Period__c</fullName>
        <label>Second Quarter of Performance Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Global Dealer Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Countries_Supported__c</columns>
        <columns>Performance_Year__c</columns>
        <columns>Performance_Period__c</columns>
        <columns>First_Quarter_of_Performance_Period__c</columns>
        <columns>Second_Quarter_of_Performance_Period__c</columns>
        <columns>Current_Performance_Period_Start_Date__c</columns>
        <columns>Current_Performance_Period_End_Date__c</columns>
        <columns>Previous_Performance_Period_Start_Date__c</columns>
        <columns>Previous_Performance_Period_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2011_P2</fullName>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Countries_Supported__c</columns>
        <columns>Current_Performance_Period_End_Date__c</columns>
        <columns>Current_Performance_Period_Start_Date__c</columns>
        <columns>First_Quarter_of_Performance_Period__c</columns>
        <columns>Performance_Period__c</columns>
        <columns>Performance_Year__c</columns>
        <columns>Previous_Performance_Period_End_Date__c</columns>
        <columns>Previous_Performance_Period_Start_Date__c</columns>
        <columns>Second_Quarter_of_Performance_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Performance_Period__c</field>
            <operation>equals</operation>
            <value>P2</value>
        </filters>
        <filters>
            <field>Performance_Year__c</field>
            <operation>equals</operation>
            <value>2011</value>
        </filters>
        <label>2011 -P2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2012_P1</fullName>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Countries_Supported__c</columns>
        <columns>Current_Performance_Period_End_Date__c</columns>
        <columns>Current_Performance_Period_Start_Date__c</columns>
        <columns>First_Quarter_of_Performance_Period__c</columns>
        <columns>Performance_Period__c</columns>
        <columns>Performance_Year__c</columns>
        <columns>Previous_Performance_Period_End_Date__c</columns>
        <columns>Previous_Performance_Period_Start_Date__c</columns>
        <columns>Second_Quarter_of_Performance_Period__c</columns>
        <columns>Country_Domain__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Performance_Period__c</field>
            <operation>equals</operation>
            <value>P1</value>
        </filters>
        <filters>
            <field>Performance_Year__c</field>
            <operation>equals</operation>
            <value>2012</value>
        </filters>
        <label>2012 -P1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2012_P2</fullName>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>Countries_Supported__c</columns>
        <columns>Performance_Year__c</columns>
        <columns>Performance_Period__c</columns>
        <columns>Current_Performance_Period_Start_Date__c</columns>
        <columns>Current_Performance_Period_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Performance_Period__c</field>
            <operation>equals</operation>
            <value>P2</value>
        </filters>
        <filters>
            <field>Performance_Year__c</field>
            <operation>equals</operation>
            <value>2012</value>
        </filters>
        <label>2012 -P2</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GDP-{0000}</displayFormat>
        <label>Global Dealer Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global Dealer Program</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>